--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body>
     <a-scene>
       <a-assets>
-        <img id="floor" src="/assets/grass2.jpg"></img>
-        <img id="sky" src="/assets/cloud.jpg"></img>
-        <img id="curved" src="/assets/sacred.png"></img>
-        <img id="wings" src="/assets/feathers.png"></img>
-        <img id="columns" src="/assets/greek.png"></img>
-        <img id="angel" src="/assets/ea.png"></img>
-        <img id="sphere" src="/assets/globe.png"></img>
-        <img id="heart" src="/assets/heart.png"></img>
+        <img id="floor" src="./assets/grass2.jpg"></img>
+        <img id="sky" src="./assets/cloud.jpg"></img>
+        <img id="curved" src="./assets/sacred.png"></img>
+        <img id="wings" src="./assets/feathers.png"></img>
+        <img id="columns" src="./assets/greek.png"></img>
+        <img id="angel" src="./assets/ea.png"></img>
+        <img id="sphere" src="./assets/globe.png"></img>
+        <img id="heart" src="./assets/heart.png"></img>
         <!-- <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossOrigin="anonymous"></img> -->
-        <audio id="song" src="Angels.mp3" autoplay loop></audio>
+        <audio id="song" src="./Angels.mp3" autoplay loop></audio>
         <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
         <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
       </a-assets>
