--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Earth Angels</title>
-    <script src="index.js"></script>
+    <script src="bundle.js"></script>
     <script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>
   </head>
 
